--- a/test-output/old/TestAll/methods.html
+++ b/test-output/old/TestAll/methods.html
@@ -1,32 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestAll</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7e463">  <td>18/11/27 08:22:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@776b83cc]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:37</td>   <td>5901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@776b83cc]">TC01</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:43</td>   <td>11174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@776b83cc]">TC02</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:43</td>   <td>11557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@776b83cc]">TC03</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:43</td>   <td>12003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@776b83cc]">TC04</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:44</td>   <td>12178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@776b83cc]">TC05</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:45</td>   <td>13746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@776b83cc]">TC06</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:46</td>   <td>14684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@776b83cc]">TC08</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/27 08:22:47</td>   <td>15144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC09()[pri:0, instance:Railway.LoginTest@776b83cc]">TC09</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>18/11/27 08:22:48</td>   <td>16320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@776b83cc]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>18/11/27 08:22:48</td>   <td>16987</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@65f095f8]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="959ece">  <td>18/11/27 08:22:52</td>   <td>20823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@65f095f8]">TC07</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="959ece">  <td>18/11/27 08:22:57</td>   <td>25960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC10()[pri:0, instance:Railway.RegisterTest@65f095f8]">TC10</td> 
-  <td>main@620557167</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>18/11/27 08:22:58</td>   <td>26530</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@65f095f8]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>18/11/29 22:30:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@78c91d2a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:04</td>   <td>6381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC01</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:04</td>   <td>6867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC02</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:05</td>   <td>7227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC03</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:05</td>   <td>7671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC04</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:05</td>   <td>7821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC05</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:07</td>   <td>9248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC06</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>18/11/29 22:31:07</td>   <td>10018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@78c91d2a]">TC08</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>18/11/29 22:31:08</td>   <td>10401</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@78c91d2a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>18/11/29 22:31:08</td>   <td>11028</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@7d48299e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="89debc">  <td>18/11/29 22:31:14</td>   <td>16606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC000()[pri:0, instance:Railway.RegisterTest@7d48299e]">TC000</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="89debc">  <td>18/11/29 22:31:17</td>   <td>19153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@7d48299e]">TC07</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="89debc">  <td>18/11/29 22:31:20</td>   <td>23055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC10()[pri:0, instance:Railway.RegisterTest@7d48299e]">TC10</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="89debc">  <td>18/11/29 22:31:21</td>   <td>23585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC11()[pri:0, instance:Railway.RegisterTest@7d48299e]">TC11</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>18/11/29 22:31:21</td>   <td>24104</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@7d48299e]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>18/11/29 22:31:22</td>   <td>24684</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.ChangePasswordTest@3aac31b7]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="d8c8f1">  <td>18/11/29 22:31:28</td>   <td>30348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangePasswordTest.TC09()[pri:0, instance:Railway.ChangePasswordTest@3aac31b7]">TC09</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="d8c8f1">  <td>18/11/29 22:31:29</td>   <td>31131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangePasswordTest.TC12()[pri:0, instance:Railway.ChangePasswordTest@3aac31b7]">TC12</td> 
+  <td>main@2118806269</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>18/11/29 22:31:29</td>   <td>31140</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.ChangePasswordTest@3aac31b7]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2118806269</td>   <td></td> </tr>
 </table>
