--- a/test-output/old/TestAll/toc.html
+++ b/test-output/old/TestAll/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>TestAll</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
-<td>10 methods:<br/>
+<td>3 tests</td>
+<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
+<td>13 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,15 +22,23 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login (5/3/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>ChangePassword (0/2/0)</td><td valign='top' align='right'>
+  <a href='ChangePassword.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Login (5/2/0)</td><td valign='top' align='right'>
   <a href='Login.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Register (2/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Register (3/1/0)</td><td valign='top' align='right'>
   <a href='Register.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
