--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Railway.ChangePasswordTest.TC13<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Errors display if password and confirm password don't match when resetting password</i></td></tr>
+<tr><td>Railway.ChangePasswordTest.TC09<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can change password</i></td></tr>
 </table>
