--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4937d">  <td>18/11/30 14:27:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ChangePasswordTest.beforeClass()[pri:0, instance:Railway.ChangePasswordTest@4f7da3a2]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1239075987</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>18/11/30 14:27:42</td>   <td>5450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangePasswordTest.TC12()[pri:0, instance:Railway.ChangePasswordTest@4f7da3a2]">TC12</td> 
-  <td>main@1239075987</td>   <td></td> </tr>
+<tr bgcolor="9fedbd">  <td>18/12/01 15:51:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.BookTicketTest@4ef37659]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2033968586</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>18/12/01 15:51:34</td>   <td>3621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC14()[pri:0, instance:Railway.BookTicketTest@4ef37659]">TC14</td> 
+  <td>main@2033968586</td>   <td></td> </tr>
 </table>
