--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Railway.BookTicketTest.TC14<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can book 1 ticket at a time</i></td></tr>
 </table>
