--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fedbd">  <td>18/12/02 02:25:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.BookTicketTest@306cf3ea]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@865667596</td>   <td></td> </tr>
-<tr bgcolor="9ca58e">  <td>18/12/02 02:25:34</td>   <td>3530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC15()[pri:0, instance:Railway.BookTicketTest@306cf3ea]">TC15</td> 
-  <td>main@865667596</td>   <td></td> </tr>
+<tr bgcolor="919fcc">  <td>18/12/03 11:23:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.BookTicketTest@a3d8174]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1652807864</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/03 11:23:44</td>   <td>4242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC14()[pri:0, instance:Railway.BookTicketTest@a3d8174]">TC14</td> 
+  <td>main@1652807864</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/03 11:23:47</td>   <td>7467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC15()[pri:0, instance:Railway.BookTicketTest@a3d8174]">TC15</td> 
+  <td>main@1652807864</td>   <td></td> </tr>
 </table>
