--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Railway.BookTicketTest.TC15<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can open 'Book ticket' page by clicking on 'Book ticket' link in 'Train timetable' page</i></td></tr>
+<tr><td>Railway.BookTicketTest.TC14<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can book 1 ticket at a time</i></td></tr>
 </table>
