--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\lan.le\AppData\Local\Temp\testng-eclipse-1893483798\testng-customsuite.xml</span>
+                    <span>C:\Users\lan.le\AppData\Local\Temp\testng-eclipse-1162273136\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,16 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Railway.BookTicketTest" class="method navigator-link" hash-for-method="TC14">TC14</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Railway.BookTicketTest" class="method navigator-link" hash-for-method="TC15">TC15</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Railway.BookTicketTest" class="method navigator-link" hash-for-method="TC16">TC16</a> <!-- method navigator-link -->
@@ -125,6 +135,24 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="TC14">
+                  </a> <!-- TC14 -->
+                  <span class="method-name">TC14</span>
+                  <em>
+(User can book 1 ticket at a time)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC15">
+                  </a> <!-- TC15 -->
+                  <span class="method-name">TC15</span>
+                  <em>
+(User can open 'Book ticket' page by clicking on 'Book ticket' link in 'Train timetable' page)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="TC16">
                   </a> <!-- TC16 -->
                   <span class="method-name">TC16</span>
@@ -137,7 +165,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\lan.le\AppData\Local\Temp\testng-eclipse-1893483798\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\lan.le\AppData\Local\Temp\testng-eclipse-1162273136\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +174,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Railway.BookTicketTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;TC16&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- Railway.BookTicketTest --&gt;
+      &lt;class name=&quot;Railway.BookTicketTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,16 +214,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC16')
+data.setCell(0, 1, 'TC14')
 data.setCell(0, 2, 'Railway.BookTicketTest')
-data.setCell(0, 3, 953);
+data.setCell(0, 3, 2015);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'TC16')
+data.setCell(1, 2, 'Railway.BookTicketTest')
+data.setCell(1, 3, 1624);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'TC15')
+data.setCell(2, 2, 'Railway.BookTicketTest')
+data.setCell(2, 3, 1079);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 953 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,18 +246,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">Railway.BookTicketTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC15</span>
-                <br/>
-                <span class="ignored-method-name">TC14</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -240,8 +263,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">TC14</span>
+                <span class="method-start">4105 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC15</span>
+                <span class="method-start">6125 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">TC16</span>
-                <span class="method-start">5066 ms</span>
+                <span class="method-start">7205 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
