--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e98b7c">  <td>18/12/03 16:16:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC16()[pri:0, instance:Railway.BookTicketTest@b62d79]">TC16</td> 
-  <td>main@1825738663</td>   <td></td> </tr>
-<tr bgcolor="e98b7c">  <td>18/12/03 16:16:12</td>   <td>-5062</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookTicketTest.beforeClass()[pri:0, instance:Railway.BookTicketTest@b62d79]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1825738663</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/05 17:40:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC14()[pri:0, instance:Railway.BookTicketTest@1ba9117e]">TC14</td> 
+  <td>main@997055773</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/05 17:40:47</td>   <td>2020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC15()[pri:0, instance:Railway.BookTicketTest@1ba9117e]">TC15</td> 
+  <td>main@997055773</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/05 17:40:48</td>   <td>3100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookTicketTest.TC16()[pri:0, instance:Railway.BookTicketTest@1ba9117e]">TC16</td> 
+  <td>main@997055773</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/05 17:40:41</td>   <td>-4101</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookTicketTest.beforeClass()[pri:0, instance:Railway.BookTicketTest@1ba9117e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@997055773</td>   <td></td> </tr>
 </table>
