--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7e463">  <td>18/12/07 16:50:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTicketTest.FTTC01()[pri:0, instance:Railway.MyTicketTest@7e9131d5]">FTTC01</td> 
-  <td>main@13803304</td>   <td></td> </tr>
-<tr bgcolor="9ca58e">  <td>18/12/07 16:50:46</td>   <td>-4202</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.MyTicketTest@7e9131d5]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13803304</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/12/07 18:35:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTicketTest.FTTC02()[pri:0, instance:Railway.MyTicketTest@152aa092]">FTTC02</td> 
+  <td>main@556488341</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>18/12/07 18:35:09</td>   <td>7468</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.MyTicketTest@152aa092]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@556488341</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>18/12/07 18:34:57</td>   <td>-4060</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.MyTicketTest@152aa092]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@556488341</td>   <td></td> </tr>
 </table>
