--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Railway.MyTicketTest.FTTC01<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can filter 'Manager ticket' table with Depart Station</i></td></tr>
 </table>
