--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Hi\AppData\Local\Temp\testng-eclipse--1209617760\testng-customsuite.xml</span>
+                    <span>C:\Users\Hi\AppData\Local\Temp\testng-eclipse-451271260\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,11 +103,6 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Railway.MyTicketTest" class="method navigator-link" hash-for-method="FTTC01">FTTC01</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Railway.MyTicketTest" class="method navigator-link" hash-for-method="FTTC02">FTTC02</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,21 +132,12 @@
 (User can filter 'Manager ticket' table with Depart Station)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="FTTC02">
-                  </a> <!-- FTTC02 -->
-                  <span class="method-name">FTTC02</span>
-                  <em>
-(User can filter 'Manager ticket' table with Depart Station)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Hi\AppData\Local\Temp\testng-eclipse--1209617760\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Hi\AppData\Local\Temp\testng-eclipse-451271260\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -160,7 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Railway.MyTicketTest&quot;/&gt;
+      &lt;class name=&quot;Railway.MyTicketTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;FTTC01&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- Railway.MyTicketTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -200,20 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'FTTC02')
+data.setCell(0, 1, 'FTTC01')
 data.setCell(0, 2, 'Railway.MyTicketTest')
-data.setCell(0, 3, 7591);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'FTTC01')
-data.setCell(1, 2, 'Railway.MyTicketTest')
-data.setCell(1, 3, 7450);
+data.setCell(0, 3, 5588);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -228,9 +214,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Railway.MyTicketTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">FTTC02</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -246,15 +239,11 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">FTTC01</span>
-                <span class="method-start">3512 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">FTTC02</span>
-                <span class="method-start">10964 ms</span>
+                <span class="method-start">5079 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">18555 ms</span>
+                <span class="method-start">10669 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
